Bug 1268938 - Use the name of the original message in Send for reply telemetry. r=billm a=ritu

aReply usually won't have a name properly set, but aMsg does. To avoid
accessing aMsg after it dies, copy the pointer to the name.